k8s/backend-go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-go
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-go
  template:
    metadata:
      labels:
        app: backend-go
    spec:
      containers:
      - name: backend-go
        image: 192.168.30.21:5000/whatsvupp-backend-go:latest
        ports:
        - containerPort: 8080
